--- a/common/tasks/main.yml
+++ b/common/tasks/main.yml
@@ -1,5 +1,10 @@
 ---
 # tasks file for common
+- name: install libselinux-python
+  yum:
+    name: libselinux-python
+    state: latest
+
 - name: update
   yum:
     name: '*'
@@ -9,3 +14,8 @@
   yum:
     name: chrony
     state: latest
+
+- name: disable selinux
+  selinux:
+    policy: targeted
+    state: permissive
